<resources>
    <string name="app_name">Vibe Player</string>
    <string name="searchHintVideos">Search videos</string>
    <string name="searchHintImages">Search images</string>
    <string name="viewMode">Videos View Mode</string>
    <string name="settings">Settings</string>


    <string name="nightMode">NightMode</string>
    <string name="subtitle">Subtitle</string>
    <string name="brightness">Brightness</string>
    <string name="btn_pause_download">Pause</string>
    <string name="srt">SRT</string>
    <string name="noResult">No Result</string>
    <string name="textSize">Text Size (sp)</string>
    <string name="textColor">Text Color</string>
    <string name="SystemDefault">System Default</string>
    <string name="lightMode">Light Mode</string>
    <string name="subtitleTextDisplay">Custom your subtitle view</string>
    <string name="theme">App Theme</string>

    <string name="subtitleNotFound">Subtitles not found!</string>
    <string name="more">More</string>
    <string name="notFound">Not found videos!</string>
    <string name="detailView">DetailView</string>
    <string name="chooseTheme">Choose your App Theme</string>
    <string name="textStyle">Text Styles</string>
    <string name="font">Font</string>
    <string name="app_version">App Version</string>
    <string name="OpenVideo">Open</string>

    <string name="saveVideos">Add to favorite</string>
    <string name="detail">Detail</string>
    <string name="notFoundImage">Not Found Images!</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="notVideoSaved">No Video!</string>
    <string name="notImageSaved">No Image!</string>

    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="clearCache">Clear Cache</string>
    <string name="features">Features</string>
    <string name="subtitleSettings">Subtitle settings</string>

</resources>