<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimary"
        android:padding="10dp"
        tools:context=".Views.settings.AppThemeSettingsActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backActivity"
            android:layout_width="@dimen/iconSize"
            android:layout_height="@dimen/iconSize"
            android:foreground="?selectableItemBackgroundBorderless"
            android:src="@drawable/icon_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/chooseTheme"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/backActivity"
            app:layout_constraintStart_toEndOf="@id/backActivity"
            app:layout_constraintTop_toTopOf="@id/backActivity" />

        <RadioGroup
            android:id="@+id/radioGroupTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_dialog_bg"
            app:layout_constraintTop_toBottomOf="@id/backActivity"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/rbNightMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/nightMode" />

            <RadioButton
                android:id="@+id/rbLightMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/lightMode" />

            <RadioButton
                android:id="@+id/rbSystemDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/SystemDefault" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>