<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TabFragments.BookmarkFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/tabView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/savedVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_videos"
                android:drawablePadding="10dp"
                android:foreground="?selectableItemBackgroundBorderless"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp"
                android:text="@string/videos"
                android:textAlignment="gravity"
                android:textColor="?hintTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="30dp"
                android:layout_height="0dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/savedImages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_pictures"
                android:drawablePadding="10dp"
                android:foreground="?selectableItemBackgroundBorderless"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp"
                android:text="@string/images"
                android:textAlignment="gravity"
                android:textColor="?hintTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/notFoundTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/notVideoSaved"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/notFoundTvImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/notImageSaved"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tabView"
            android:layout_margin="10dp"
            android:clipToPadding="true"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tabView"
            android:layout_margin="10dp"
            android:clipToPadding="true"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:visibility="gone" />

    </RelativeLayout>
</layout>