<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="textSize"
            type="String" />

        <variable
            name="textStyle"
            type="String" />

        <variable
            name="textFont"
            type="String" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimary"
        android:orientation="vertical"
        tools:context=".Views.settings.SubtitleSettingsActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/actionBarColor"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backActivity"
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"
                android:layout_centerVertical="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:src="@drawable/icon_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/backActivity"
                android:text="@string/subtitle"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/layoutPadding">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/subtitleDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="160dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/video_folder_item_shape"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/subtitleTextDisplay"
                    android:textAlignment="gravity"
                    android:textSize="15sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/custom_dialog_bg"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textSizeNumberPicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/video_folder_item_shape"
                        android:foreground="?selectableItemBackgroundBorderless"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="10dp"
                        android:soundEffectsEnabled="true"
                        android:text="@{textSize}"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="15" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textSize"
                        app:layout_constraintBottom_toBottomOf="@id/textSizeNumberPicker"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/textSizeNumberPicker" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_dialog_bg"
                    android:padding="10dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/colorRecycler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:clipToPadding="true"
                        android:orientation="horizontal"
                        android:scrollbars="none"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:itemCount="4" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textColor"
                        app:layout_constraintBottom_toBottomOf="@id/colorRecycler"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/colorRecycler" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <RelativeLayout
                    android:id="@+id/textStyleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_dialog_bg"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:text="@string/textStyle"
                        android:textAlignment="gravity" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"
                        android:layout_toStartOf="@id/textStyleIcon"
                        android:text='@{"( " + textStyle + " )"}'
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/textStyleIcon"
                        android:layout_width="@dimen/iconSize"
                        android:layout_height="@dimen/iconSize"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="2dp"
                        android:src="@drawable/ic_forward" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/textFontLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_dialog_bg"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:text="@string/font"
                        android:textAlignment="gravity" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"
                        android:layout_toStartOf="@id/textFontIcon"
                        android:text='@{"( " + textFont + " )"}'
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/textFontIcon"
                        android:layout_width="@dimen/iconSize"
                        android:layout_height="@dimen/iconSize"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="2dp"
                        android:src="@drawable/ic_forward" />

                </RelativeLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>